src/objects/ScheduleConfig__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>CronExpression__c</fullName>
        <label>Cron Expression</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobName__c</fullName>
        <label>Job Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <label>Schedule Config</label>
</CustomObject>